mool/tests/compile/fail/projection_type_mismatch.stderr
error[E0277]: the trait bound `mool::queries::Column<i64>: IntoExpr<std::string::String>` is not satisfied
  --> tests/compile/fail/projection_type_mismatch.rs:19:29
   |
19 |         .set(&output.title, posts.id.clone());
   |          ---                ^^^^^^^^^^^^^^^^ the trait `IntoExpr<std::string::String>` is not implemented for `mool::queries::Column<i64>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoExpr<T>`:
             &mool::queries::Column<T>
             mool::queries::Column<T>
note: required by a bound in `queries::executables::read::<impl All<T>>::set`
  --> src/queries/executables/read.rs
   |
   |     pub fn set<V>(mut self, target: impl IntoOutputTarget<V>, expr: impl IntoExpr<V>) -> Self
   |                                                                          ^^^^^^^^^^^ required by this bound in `queries::executables::read::<impl All<T>>::set`
